[gd_scene load_steps=10 format=3 uid="uid://dgiqabo85kphg"]

[ext_resource type="Script" path="res://scenes/menus/pause_menu.gd" id="1_18dkr"]
[ext_resource type="Theme" uid="uid://dxgoy0vbgwgyv" path="res://textures/themes/main_theme.tres" id="2_okoqv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ndyvj"]
bg_color = Color(0, 0, 0, 0.329412)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5s6n"]
bg_color = Color(0, 0, 0, 0.760784)

[sub_resource type="SystemFont" id="SystemFont_vypk8"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yl3af"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.858824)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rkxo1"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.858824)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qh4ec"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.858824)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a7660"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.858824)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_18dkr")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.00586)
theme_override_styles/panel = SubResource("StyleBoxFlat_ndyvj")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("2_okoqv")
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="ContinueButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="Separator4" type="Control" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator5" type="Control" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Separator6" type="Control" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator7" type="Control" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Quit"

[node name="SettingsContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.998584, 1.01289)
theme_override_styles/panel = SubResource("StyleBoxFlat_e5s6n")

[node name="MarginContainer" type="MarginContainer" parent="SettingsContainer"]
layout_mode = 2
theme = ExtResource("2_okoqv")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Separator" type="Control" parent="SettingsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 24
theme_override_fonts/font = SubResource("SystemFont_vypk8")
theme_override_font_sizes/font_size = 64
text = "Settings"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_okoqv")
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="BackButton" type="Button" parent="SettingsContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("2_okoqv")
theme_override_styles/normal = SubResource("StyleBoxFlat_yl3af")
theme_override_styles/hover = SubResource("StyleBoxFlat_rkxo1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qh4ec")
theme_override_styles/focus = SubResource("StyleBoxFlat_a7660")
text = "Back"

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="SettingsContainer/MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
